--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Felista Manoti",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
